# GraphTsetlinMachine

./: pyproject.toml
GraphTsetlinMachine/: graphs.py  kernels.py  tm.py
GraphTsetlinMachine/cuda/: code_clauses.cu  code_evaluate.cu  code_prepare.cu  code_transform.cu  code_update.cu
examples/: MNISTConvolutionDemo.py  MNISTVanillaDemo.py  NoisyMultiValueXORDemo.py  NoisyXORDemo.py  NoisyXORMNISTDemo.py  SequenceClassificationDemo.py  XOR_AND_OR_MultiOutputDemo.py  test_NXOR.py  test_node_types.py
