[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GraphTsetlinMachine"
version = "0.3.2.2"
dependencies = [
    "numpy<2",
    "pycuda",
    "scipy",
    "sympy",
]
readme = "README.md"
dynamic = [
    "description",
    "authors",
    "license",
    "keywords",
]

[tool.setuptools.package-data]
"*" = ["cuda/*.cu"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportUnusedImport = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "tab"
